# GradBridge

./: .dockerignore  .env.example  .gitignore  AGENT.md  CLOUDFLARE.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  README.md  SECURITY.md  cloudflared-config.yml  deploy.bat  deploy.sh  docker-compose.yml  docker-entrypoint.sh  eslint.config.mjs  next.config.ts  package.json  skills-lock.json  test.py  vercel.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
prisma/: schema.prisma  schema.sqlite.prisma
prisma/migrations/001_init/: migration.sql
prisma/migrations/002_remove_password_hash/: migration.sql
prisma/migrations/003_add_user_role_and_webhooks/: migration.sql
rust-cli/: Cargo.toml  README.md
rust-cli/src/: agents.rs  api.rs  config.rs  diff.rs  local.rs  main.rs  rag.rs  tui.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/: route.ts
src/app/api/agents/: route.ts
src/app/api/chat/: route.ts
src/app/api/conversations/: route.ts
src/app/api/files/: route.ts
src/app/api/knowledge/: route.ts
src/app/api/memory/: route.ts
src/app/api/plan/: route.ts
src/app/api/plans/: route.ts
src/components/: theme-provider.tsx
src/components/gradbridge/: about-view.tsx  agents-view.tsx  art.tsx  auth-view.tsx  chat-view.tsx  cli-view.tsx  files-view.tsx  gradbridge-app.tsx  guide-view.tsx  icon.tsx  knowledge-view.tsx  landing-view.tsx  markdown.tsx  memory-view.tsx  message-bubble.tsx  mode-selector.tsx  settings-view.tsx  sidebar.tsx  topbar.tsx
src/lib/: agents.ts  auth.ts  context.ts  diff.ts  llm.ts  rag.ts  seed.ts  serializers.ts  store.ts  types.ts  webhooks.ts  workspace.ts
src/lib/auth/: authorize.ts  server.ts
src/lib/rag/: context-builder.ts  embeddings-fs.ts  embeddings.ts  finetune.ts  transformers.ts
(+22 files in other folders)
