[package]
name = "gradbridge"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["GradBridge Team"]
license = "MIT"
description = "Rust TUI CLI edition of GradBridge — the bridge from CS graduation to shipped."
readme = "README.md"
homepage = "https://gradbridge.dev"
repository = "https://github.com/gradbridge/gradbridge"
keywords = ["ai", "agent", "tui", "cli", "career"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "gradbridge"
path = "src/main.rs"

[dependencies]
# --- TUI + terminal ---
ratatui = { version = "0.28", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# --- Async runtime ---
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# --- HTTP + serialization ---
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- CLI ---
clap = { version = "4.5", features = ["derive", "env"] }

# --- Errors ---
anyhow = "1"

# --- Config / dirs / toml (hand-rolled, no extra dep beyond toml) ---
dirs = "5"
toml = "0.8"

# --- Local SQLite cache for RAG ---
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }

# --- Terminal colors (non-TUI mode output) ---
colored = "2"

# --- Misc ---
chrono = { version = "0.4", features = ["serde"] }
rpassword = "7"   # hidden password prompt for `gradbridge login`
bytes = "1"       # explicit dep (reqwest streams return bytes::Bytes)

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
